added CHcomments to ch3 of CS- first half

--- a/caseStudyWP/03-chap3.Rmd
+++ b/caseStudyWP/03-chap3.Rmd
@@ -288,7 +288,7 @@ Table: (\#tab:logisticLRPs2020) Aggregate abundance based LRPs (with 95% confide
 
 ***Logistic Regression Diagnostics***
 
-Logistic regression diagnostics showed  that key regression assumptions were met, and that model fits were strong enough to support estimation of logistic regression-based LRPs from all three models(Table @ref(tab:logisticDiagIFC2020)). Assumptions of linearity and lack of influential outliers were met for all models. The assumption of linearity was demonstrated based on the Box-Tidwell test. This test evaluates the significance of adding a non-linear interaction term to the logit regression. We found that this additional interaction term was not significant, supporting the linearity assumption. An examination of deviance residuals did not show any large outliers, i.e. no residual values were greater than 2. Observations were independent at all year lags examined for the Logistic:Sgen-priorCap and Logistic-IFCRT models. For the Logistic:Sgen-Ricker model, observations were independent at 1 and 2-year lags and marginally significant at a  3-year lag suggesting generational-scale trends (Figure @ref(fig:coho-logisticACF-IM)). The Wald Test showed that logistic model coefficient for aggregate abundance was marginally significant (p < 0.10). Psuedo-$R^2$ statistics indicated a moderately strong relationship between aggregate abundance and the probability of all CUs being above their lower benchmarks, and the goodness of fit statistics indicated a significant fit of the model with aggregate abundance relative to the null model based on p-values less than 0.01. Finally, 'out-of-sample' hit ratios representing classification accuracy as the proportion of successful predictions when one year of data was iteratively left out of the model fit, were relatively high at low probability thresholds, indicating good accuracy. This results was especially true for the Logistic:Sgen-Ricker model which had a hit ratio of 0.95 at probability thresholds of 50% and 66%. Classification accuracy was lowest for all models at the 99% probability threshold.
+Logistic regression diagnostics showed  that key regression assumptions were met, and that model fits were strong enough to support estimation of logistic regression-based LRPs from all three models(Table @ref(tab:logisticDiagIFC2020)). Assumptions of linearity and lack of influential <!--CH; suggest removing influenctial. We didn't assess this--> outliers were met for all models. The assumption of linearity was demonstrated based on the Box-Tidwell test. This test evaluates the significance of adding a non-linear interaction term to the logit regression. We found that this additional interaction term was not significant, supporting the linearity assumption. An examination of deviance residuals did not show any large outliers, i.e. no residual values were greater than 2. Observations were independent at all year lags examined for the Logistic:Sgen-priorCap and Logistic-IFCRT models. For the Logistic:Sgen-Ricker model, observations were independent at 1 and 2-year lags and marginally significant at a  3-year lag suggesting generational-scale trends (Figure @ref(fig:coho-logisticACF-IM)). The Wald Test showed that logistic model coefficient for aggregate abundance was marginally significant (p < 0.10). Psuedo-$R^2$ statistics indicated a moderately strong relationship between aggregate abundance and the probability of all CUs being above their lower benchmarks, and the goodness of fit statistics indicated a significant fit of the model with aggregate abundance relative to the null model based on p-values less than 0.01. Finally, 'out-of-sample' hit ratios representing classification accuracy as the proportion of successful predictions when one year of data was iteratively left out of the model fit, were relatively high at low probability thresholds, indicating good accuracy. This results was especially true for the Logistic:Sgen-Ricker model which had a hit ratio of 0.95 at probability thresholds of 50% and 66%. Classification accuracy was lowest for all models at the 99% probability threshold.
 
 +-------------------------+--------------+-------------------+-----------------+
 | Diagnostic Test         | Sgen-Ricker  | Sgen-priorCap     | IFCRT
@@ -321,7 +321,7 @@ Sample sizes were small due to the short time series available for Interior Fras
 
 ***Retrospective Analysis***
 
-2015 was the first year in which the available IFC time series was long enough to estimate logistic regression-based LRPs using the Logistic:Sgen-priorCap and Logistic:IFCRT models. However, the Logistic:Sgen-priorCap model was unable to converge on an LRP estimate in 2018. The Logistic:Sgen-Ricker model required an additional two years of data before LRP estimates were first available in 2017. As a result, only four-six years of retrospective analyses were available, depending on the model being considered. All three models showed some fluctuations in LRP estimates over time (Figure \@ref(fig:coho-retroLRPs)). The Logistic:IFCRT model tended to produce the most stable LRPs over time.  
+2015 was the first year in which the available IFC time series was long enough to estimate logistic regression-based LRPs using the Logistic:Sgen-priorCap and Logistic:IFCRT models. However, the Logistic:Sgen-priorCap model was unable to converge on an LRP estimate in 2018. The Logistic:Sgen-Ricker model required an additional two years of data before LRP estimates were first available in 2017. As a result, only four-six<!-- CH; 4-6 instead?--> years of retrospective analyses were available, depending on the model being considered. All three models showed some fluctuations in LRP estimates over time (Figure \@ref(fig:coho-retroLRPs)). The Logistic:IFCRT model tended to produce the most stable LRPs over time.  
 
 ```{r coho-retroLRPs, fig.cap="Three-year geometric mean of aggregate spawning abundance for the Interior Fraser Coho SMU (black line) and associated time series of retrospective LRPs from logistic regression-based estimation methods. LRPs are based on a 50\\% probability that all CUs will be above their lower benchmarks. Annual LRP estimates are shown as maximum likelihood values (coloured lines) and associated 95\\% confidence intervals (shaded areas).", warning=FALSE, echo=FALSE, out.width = '50%', fig.align="center"}
 knitr::include_graphics("figure/coho_LRP_compareRetro.png")
@@ -340,12 +340,17 @@ knitr::include_graphics("figure/coho-StatusByNCUs-IndivRickerSurv-50.png")
   
 When the Logistic:Sgen-priorCap model was applied to missing data scenarios in which four out of five CUs had data, LRP estimates were only available for two to three of the five CU combinations, depending on the year (Figure \@ref(fig:coho-IMCap-missingCUs)). For scenarios in which LRP estimates were available, status was poorly estimated with the estimate often falling outside of the 95% confidence interval of the full data estimate. While convergence was more frequent when only three CUs were used, estimates had high uncertainty and were variable among scenarios. Several of the status estimates from three-CU scenarios fell outside of the 95% confidence interval for the full data case. 
 
-The failure of both the Logistic:Sgen-Ricker and Logistic:Sgen-priorCap models to converge in some years is a function of low sample sizes in the available data set, such that the removal of one or two CUs results in a failure of the logistic regression model to converge on a solution. For example, for the Logistic:Sgen-Ricker model, the South Thompson CU is an influencial CU. Removing it from the characaterization of 'successful' and 'failure' years, as well as the aggregate abundance used to fit the logistic regression, means that the model cannot converge on a solution. For the Logistic:Sgen-priorCap model, several CUs are influencial due to higher $S_{gen}$ estimates compared to the  Logistic:Sgen-Ricker model. Because several different CUs contribute to 'failure' years, in which CU-level abundances drop below $S_{gen}$, there is higher sensitivity to the removal of any one of these CUs.  
+The failure of both the Logistic:Sgen-Ricker and Logistic:Sgen-priorCap models to converge in some years is a function of low sample sizes in the available data set, such that the removal of one or two CUs results in a failure of the logistic regression model to converge on a solution. For example, for the Logistic:Sgen-Ricker model, the South Thompson CU is an influential CU. Removing it from the characterization of 'successful' and 'failure' years, as well as the aggregate abundance used to fit the logistic regression, means that the model cannot converge on a solution. <!--CH; is this becuase removing it means successes for alls year, i.e., no failures?  -->For the Logistic:Sgen-priorCap model, several CUs are influential due to higher $S_{gen}$ estimates compared to the  Logistic:Sgen-Ricker model. Because several different CUs contribute to 'failure' years, in which CU-level abundances drop below $S_{gen}$, there is higher sensitivity to the removal of any one of these CUs.  
+
 
 <!--
 CW: I am curious why the results were different between the two Ricker models, and it seems that the confidence intervals are tighter for the Sgen_priorCap:LRP model.
 Is this result generalizble? i.e., Does this result indicate that missing two or more CUs will increase uncertainty in LRP estimates? 
 KH: Does the explanation in the above paragraph help?
+
+CH comment: In some ways it is genearlizable IF having more CUs means that you have better spread of 0s and 1s so that uncertainty in LRP is reduced. However, even if the stocks covary perfectly, but one is just more depleted than the others and so dips below the LBM more, then loosing that CU will bias the status upwards. I guess we never get the reverse where missing a healthy CU biases it downwards since the LRP is defined of at least one CU being below red status/LBM. So perhaps that is a generalizable result- that missing CUs can result in biased positive not negative status.
+
+Perhaps this is generalizable-- when time trends in statuses are not consistent across CUs, and status bridge red-amber, then LRP will be sens to which CUs are included. Although there is high correlation among CUs for this SMU, its not perfect. I think this comes back to our criteria for representing missing CUs. Is it possible to add text to tthis section checking if missing CUs can be represented by other CUs based on those criteria?   Or does this matter...  
 --> 
 
 
@@ -356,13 +361,13 @@ knitr::include_graphics("figure/coho-StatusByNCUs-IndivRickerSurvCap-50.png")
 
 \linebreak
 
-LRPs based on the Logistic:IFCRT model could be estimated for all four-CU data scenarios in all years (Figure \@ref(fig:coho-distributional-missingCUs)). Resulting estimates of SMU status were similar to the full data estimate for four of the five CU combinations. Status estimates were highest and most uncertain when the South Thompson CU was dropped from the analysis (i.e., the last of the five four-CU combinations shown for each year in Figure \@ref(fig:coho-distributional-missingCUs)). This pattern is due the 2015 data point for South Thompson CU being an influential observation that has a large impact on the shape of the fit model. For missing data scenarios in which only three CUs were included, status estimates often had higher uncertainty than the four-CU or full data scenarios, and showed high variability among scenarios in estimated status.  
+LRPs based on the Logistic:IFCRT model could be estimated for all four-CU data scenarios in all years (Figure \@ref(fig:coho-distributional-missingCUs)). Resulting estimates of SMU status were similar to the full data estimate for four of the five CU combinations. Status estimates were highest and most uncertain when the South Thompson CU was dropped from the analysis (i.e., the last of the five four-CU combinations shown for each year in Figure \@ref(fig:coho-distributional-missingCUs)). This pattern is due the 2015 data point for South Thompson CU being an influential observation that has a large impact on the shape of the fit model <!--CH: might be helpful to say if it's red status year, so brings LRP down; when missing LRP is higher-->. For missing data scenarios in which only three CUs were included, status estimates often had higher uncertainty than the four-CU or full data scenarios, and showed high variability among scenarios in estimated status.  
 
 
 ```{r coho-distributional-missingCUs, fig.cap="Retrospective estimates of aggregate status (with 95\\% confidence intervals) from the Dist:LRP model under different scenarios about missing CUs, where status is characterized as the recent generational mean of aggregate abundance / LRP. LRPs are based on a 50\\% probability that all CUs will be above their lower benchmarks. See Figure xx caption for more details.", warning=FALSE, echo=FALSE, out.width = '80%',  fig.align="center"}
 knitr::include_graphics("figure/coho-StatusByNCUs-SPopAbundThreshST-50.png")
 ```
-
+\linebreak
 
 ## LRP ESTIMATION: AGGREGATE ABUNDANCE PROJECTION-BASED LRPS
 
@@ -370,7 +375,7 @@ knitr::include_graphics("figure/coho-StatusByNCUs-SPopAbundThreshST-50.png")
 
 Forward projections of each of the five CUs with the Interior Fraser Coho SMU were done using the `samSim` modelling tool (Appendix \@ref(app:samsim-appendix)). Parameters characterizing population dynamics, marine survival rates, and exploitation rate were derived directly from data sets described in Section \@ref(cohoData). Base case parameters and alternative parameter values tested in sensitivity analyses are provided in Table \@ref(tab:coho-BaseProjectPars). Additional details on key model parameterizations and sensitivity analyses are also described in text below.  
 
-Projection model outputs were used to estimate projection-based LRPs using the methods described on Section \@ref(projectedMethods). Forward projections were run for 30 years over 20,000 simulation trials.  The high number of simulation trials was required to stabilize LRP estimates given the binning of aggregate escapement in 200-fish intervals to identify LRPs based on probability thresholds.  
+Projection model outputs were used to estimate projection-based LRPs using the methods described on Section \@ref(projectedMethods). Forward projections were run for 30 years over 20,000 simulation trials.  The high number of simulation trials was required to stabilize LRP estimates given the binning of aggregate escapement in 200-fish intervals to identify LRPs based on probability thresholds.  <!--CH: maybe we shoould mention that initial trials over longer periods, 100 years, gave similar results-->
 
 
 ***Stock recruitment dynamics***  
@@ -383,16 +388,16 @@ The two stock recruitment models, Ricker and Ricker_priorCap, were treated as tw
 
 We parameterized correlations in recruitment residuals among CUs from MLE predictions of pairwise correlations from spawner recruit model fits. The correlation matrix from the base Ricker model fit is shown in Figure \@ref(fig:coho-recruitResid-Ricker). Correlation values for the Ricker_priorCap model were similar (not shown).    
 
-We initially attempted to reduce covariation in spawner abundances among CUs by scaling correlations in recruitment residuals (i.e., scalar < 1). However, we found that scalars had little effect on projected correlations in spawner abundances among CUs due to the shared marine rate coefficient dominating among-CU variability in recruitment. We therefore used sensitivity analyses of the level of variability in marine survival coefficents among CUs to drive patterns of covariation in spawner abundance, as described below. This approach differs from that taken for WCVI Chinook (Section \@ref(#WCVIchinookChapter).  
+We initially attempted to reduce covariation in spawner abundances among CUs by scaling correlations in recruitment residuals (i.e., scalar < 1). However, we found that scalars had little effect on projected correlations in spawner abundances among CUs due to the shared marine rate coefficient dominating among-CU variability in recruitment. We therefore used sensitivity analyses of the level of variability in marine survival coefficients among CUs to drive patterns of covariation in spawner abundance, as described below. This approach differs from that taken for WCVI Chinook (Section \@ref(#WCVIchinookChapter).  
 
 ```{r coho-recruitResid-Ricker, fig.cap="Bubble plot of correlations in recruitment residuals among CUs from base Ricker model fit.", warning=FALSE, echo=FALSE, out.width = '50%',  fig.align="center"}
 knitr::include_graphics("figure/coho-RecuitResidCorrelation-Ricker.png")
 ```
-
+\linebreak
 
 ***Variability in marine survival coefficient among CUs***
 
-When fitting spawner recuit models to data, we followed the approach of @kormanEvaluationFrameworkAssessing2019 and @arbeiderInteriorFraserCoho2020 in assuming that all CUs experienced the same marine survival rate for given sea-entry year, and that the marine survival coefficient, $\gamma$, was constant both among CUs and among years.  When projecting CUs forward, we maintained this assumption in our base case by generating a single marine survival rate for each sea entry year and setting $\sigma_{\gamma}$ = 0, where $\sigma_{\gamma}$ is the standard deviation of among-CU variability in $\gamma$ such that $\gamma_i \sim Normal(\bar{\gamma}, \sigma_{\gamma})$. We used sensitivity analyses on $\sigma_{\gamma}$ to test the effect of changes in spawner abundance covariation among CUs on projected LRP estimates. Three alternative levels of $\sigma_{\gamma}$ were used in sensitivity analyses: $\sigma_{\gamma}$ = 0.045, 0.0675, and 0.09. We selected these levels to cover a range between 0 and 0.09, where 0.09 was the standard deviation of the estimated marginal posterior distribution for $\gamma$ from our Ricker stock recruitment model fit. 
+When fitting spawner recruit models to data, we followed the approach of @kormanEvaluationFrameworkAssessing2019 and @arbeiderInteriorFraserCoho2020 in assuming that all CUs experienced the same marine survival rate for given sea-entry year, and that the marine survival coefficient, $\gamma$, was constant both among CUs and among years.  When projecting CUs forward, we maintained this assumption in our base case by generating a single marine survival rate for each sea entry year and setting $\sigma_{\gamma}$ = 0, where $\sigma_{\gamma}$ is the standard deviation of among-CU variability in $\gamma$ such that $\gamma_i \sim Normal(\bar{\gamma}, \sigma_{\gamma})$. We used sensitivity analyses on $\sigma_{\gamma}$ to test the effect of changes in spawner abundance covariation among CUs on projected LRP estimates. Three alternative levels of $\sigma_{\gamma}$ were used in sensitivity analyses: $\sigma_{\gamma}$ = 0.045, 0.0675, and 0.09. We selected these levels to cover a range between 0 and 0.09, where 0.09 was the standard deviation of the estimated marginal posterior distribution for $\gamma$ from our Ricker stock recruitment model fit. 
 
 The resulting correlations in spawner abundances from the projections are shown in Figure \@ref(fig:coho-sigGammaCorrelation). In the forward projections, pairwise correlations in projected spawner abundances among CUs for the base case assumption of $\sigma_{\gamma}$ = 0 were similar to observed pairwise correlations in spawner abundances among CUs. Increasing $\sigma_{\gamma}$ resulted in decreased among-CU correlation in projected spawner abundances.  
 
@@ -414,9 +419,9 @@ knitr::include_graphics("figure/coho-ObsAgeProp-byCU.png")
 
 ***Covariance in exploitation***
 
-We assumed an average exploitation rate of 12.5% for all CUs in forward projections, with common interannual variability in exploitation rates due to shared fishery impacts among CUs each year. Interannual variability in exploitation rates was assumed to be beta distributed (constrained between 0 and 1), with the standard deviation of the beta distribution parameterized from estimated exploitation rates for 1998 - 2016 brood years. The corresponding coefficient of variation (CV) for interannual variability was 0.44.
+We assumed an average exploitation rate of 12.5% for all CUs in forward projections, <!--CH: based on ave historical values?-->with common interannual variability in exploitation rates due to shared fishery impacts among CUs each year. Interannual variability in exploitation rates was assumed to be beta distributed (constrained between 0 and 1), with the standard deviation of the beta distribution parameterized from estimated exploitation rates for 1998 - 2016 brood years. The corresponding coefficient of variation (CV) for interannual variability was 0.44.
 
-Exploitation rates for Interior Fraser Coho are only available at the SMU-level due to limited coded-wire indicator stocks (1-2 CUs with indicators / year) and variation in which indicator stocks were operational in a given year. As a result, empirically-based estimates of among-CU variability in exploitation rates are not possible. However, there are reasons to expect that exploitation rates to vary among CUs in a given year, including differences in freshwater fisheries.  We assumed that CU-specific variability in exploitation rates was half the common (SMU-level) interannual variability (cv=0.22), and varied this in sensitivity analyses from 0 and 0.44 to cover plausible bounds. Varying assumptions about variability in exploitation among CUs between cv= 0 and 0.44 in forward projections did not impact the distribution of correlations in spawner abundances in the projections (results not shown).  
+Exploitation rates for Interior Fraser Coho are only available at the SMU-level due to limited coded-wire indicator stocks (1-2 CUs with indicators / year) and variation in which indicator stocks were operational in a given year. As a result, empirically-based estimates of among-CU variability in exploitation rates are not available. However, there are reasons to expect exploitation rates to vary among CUs in a given year, including differences in freshwater fisheries.  We assumed that CU-specific variability in exploitation rates was half the common (SMU-level) interannual variability (cv=0.22), and varied this in sensitivity analyses from 0 and 0.44 to cover plausible bounds. Varying assumptions about variability in exploitation among CUs between cv= 0 and 0.44 in forward projections did not impact the distribution of correlations in spawner abundances in the projections (results not shown).  
 
 
 \begin{longtable}[]{p{3.7cm} p{5cm} p{6.3cm}}
@@ -504,7 +509,7 @@ Increasing $\sigma_{\gamma}$, which corresponded with reduced between-CU correla
 knitr::include_graphics("figure/coho-projLRPCurve-bySigGamma.png")
 ```
 
-Increasing the average exploitation rate used in forward projections also led to a shift in projected curves to the right; however, the shift was more gradual over the range fo exploitation rate scenarios we considered than the effect of increasing $\sigma_{\gamma}$ (Figure \@ref(fig:coho-projLRPCurve-byER)). The effect of increasing exploitation rates was smallest at low probability thresholds. At p = 0.5, the LRP differed by 400 fish between the ER = 2.5% and ER = 12.5% scenarios (range = 19,700 - 21,000), and by < 4000 fish among all four scenarios (range = 19,700 - 24,000). Differences were much larger among the four exploitation rate levels examined for the p = 0.90 threshold. When the average exploitation rate was set at 22.5% or 32.5%, aggregate abundances barely exceeded 60,000 fish, and it was not possible to achieve a 99% probability of all CUs being above their lower $S_{gen}$ benchmarks.  
+Increasing the average exploitation rate used in forward projections also led to a shift in projected curves to the right; however, the shift was more gradual over the range of exploitation rate scenarios we considered than the effect of increasing $\sigma_{\gamma}$ (Figure \@ref(fig:coho-projLRPCurve-byER)). The effect of increasing exploitation rates was smallest at low probability thresholds. At p = 0.5, the LRP differed by 400 fish between the ER = 2.5% and ER = 12.5% scenarios (range = 19,700 - 21,000), and by < 4000 fish among all four scenarios (range = 19,700 - 24,000). Differences were much larger among the four exploitation rate levels examined for the p = 0.90 threshold. When the average exploitation rate was set at 22.5% or 32.5%, aggregate abundances barely exceeded 60,000 fish, and it was not possible to achieve a 99% probability of all CUs being above their lower $S_{gen}$ benchmarks.  
 
 
 ```{r coho-projLRPCurve-byER, fig.cap="Probability of all CUs being above their lower benchmark of Sgen along a gradient in aggregate abundances (within bins of 200 fish) for alternative scenarios about average exploitation rates (ER) in forward projections. The baseline value used for forward projections was ER = 12.5\\%. Results are derived from projections over 30 years and 20,000 MC Trials. Each dot is the proportion of MC trials where all CUs were > Sgen.  Candidate LRPs at p=0.5 (yellow) and p=0.66 (blue), 0.90 (green), and 0.99 (orange) are highlighted.", warning=FALSE, echo=FALSE, out.width = '60%',  fig.align="center"}
